# pism

./: .readthedocs.yaml  README.md  mkdocs.yml  process_test.ipynb  pyproject.toml  test.ipynb
.github/workflows/: black.yml  test.yml
docs/: conf.py  index.rst  mkdocs.yml  my_page.md  requirements.txt
docs/source/: #index.rst#  API.rst  API.rst~  Quickstart.rst  community.rst  community.rst~  conf.py  index.rst  index.rst~  installation.rst
examples/: CIE.ipynb  CIE_prototype.ipynb  convert_notebook_to_readme.sh  cooling.ipynb
src/pism/: __init__.py  misc.py  process.py  symbols.py
src/pism.egg-info/: PKG-INFO  SOURCES.txt
src/pism/numerics/: solvers.py
src/pism/numerics/tests/: test_newton_rootsolve.py
src/pism/processes/: __init__.py  finestructure.ipynb  freefree_emission.py  ionization.py  line_cooling.py  nbody_process.py  process.py  recombination.py  thermal_process.py
