[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pism"
version = "0.0.1"
authors = [
  { name="Mike Grudić", email="mgrudic@flatironinstitute.org" },
]
description = "object-oriented ISM processes"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies=["mkdocstrings[python]>=0.18",]

[project.urls]
Homepage = "https://github.com/mikegrudic/pism"
Issues = "https://github.com/mikegrudic/pism/issues"